# GDPC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.c  config.h  gdpc.c  main.c
src/: config.c  config.h  dynamic_array.c  dynamic_array.h  file_utils.c  file_utils.h  gd_resources.c  gd_resources.h  gdpc.c  gdpc.h  main.c
